Add persistent volume claim to deployment
Added persistent volume claim for goserver.

--- a/k8s/deployment.yml
+++ b/k8s/deployment.yml
@@ -64,8 +64,13 @@ spec:
           volumeMounts:
             - name: config
               mountPath: '/go/opa'
+            - name: goserver-volume
+              mountPath: /go/pcv
 
       volumes:
+        - name: goserver-volume
+          persistentVolumeClaim:
+            claimName: goserver-pvc
         - name: config
           configMap:
             name: configmap-family
